[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "physioex"
dynamic = ["version"]
description = "A python package for explainable sleep staging via deep learning"
readme = {"file" = "README.md", "content-type" = "text/markdown"}
requires-python = ">=3.11"
authors = [
    { name = "Guido Gagliardi", email = "guido.gagliardi@phd.unipi.it" }
]
license = {text = "MIT"}
dependencies = [
    "torch>=2.7.0",
    "torchmetrics>=1.8.0", 
    "pytorch_lightning>=2.5.0",
    "lightning>=2.5.0",
    
    "matplotlib>=3.10.0",
    "scikit_learn>=1.7.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.0",

    "boto3>=1.40.0",
    "botocore>=1.40.0",
    
    "huggingface_hub>=0.34.0",
    "vector_quantize_pytorch>=1.22.0",
    "pytorch_metric_learning>=2.8.0",
    "captum>=0.6.0",
    "dirhash>=0.5.0",
    "joblib>=1.4.0",
    "loguru>=0.7.0",
    "psg_utils>=0.1.7",
    "pyedflib>=0.1.42",
    "pyunpack>=0.3",
    "rarfile>=4.2",
    "wfdb>=4.3.0",
    "braindecode>=1.0.0",
    "ml_dtypes>=0.5.0",
    "umap-learn>=0.5.0",  
]

[tool.hatch.version]
path = "physioex/__init__.py"


[project.scripts]
train = "physioex.train.bin.train:train_script"
finetune = "physioex.train.bin.finetune:finetune_script"
test_model = "physioex.train.bin.test:test_script"
preprocess = "physioex.preprocess.bin.main:main"

[project.urls]
Homepage = "https://github.com/guidogagl/physioex"
Documentation = "https://guidogagl.github.io/physioex"
Repository = "https://github.com/guidogagl/physioex"
Issues = "https://github.com/guidogagl/physioex/issues"
